--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "^3.2.0",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {},
   "scripts": {
